[package]
edition = "2021"
name = "bevy_dodge"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
bevy_prng = { version = "0.2.0", features = ["rand_chacha"] }
bevy_rand = { version = "0.4.0", features = ["rand_chacha"] }
bevy_vox = "0.8.1"
rand_core = "0.6.4"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
